// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Table.TFoot allowTags=undefined 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot checkGrammar=false 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot checkGrammar=true 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot checkHighlight=false 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot checkHighlight=true 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot checkSpaces=false 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot checkSpaces=true 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot className="my-classname" 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema="brown" 1`] = `
<tfoot
  className="color-schema-brown uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema="brown-rich" 1`] = `
<tfoot
  className="color-schema-brown-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema="cyan" 1`] = `
<tfoot
  className="color-schema-cyan uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema="cyan-rich" 1`] = `
<tfoot
  className="color-schema-cyan-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema="default" 1`] = `
<tfoot
  className="color-schema-default uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema="green" 1`] = `
<tfoot
  className="color-schema-green uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema="green-rich" 1`] = `
<tfoot
  className="color-schema-green-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema="grey" 1`] = `
<tfoot
  className="color-schema-grey uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema="grey-rich" 1`] = `
<tfoot
  className="color-schema-grey-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema="orange" 1`] = `
<tfoot
  className="color-schema-orange uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema="orange-rich" 1`] = `
<tfoot
  className="color-schema-orange-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema="pink" 1`] = `
<tfoot
  className="color-schema-pink uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema="pink-rich" 1`] = `
<tfoot
  className="color-schema-pink-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema="purple" 1`] = `
<tfoot
  className="color-schema-purple uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema="purple-rich" 1`] = `
<tfoot
  className="color-schema-purple-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema="red" 1`] = `
<tfoot
  className="color-schema-red uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema="red-rich" 1`] = `
<tfoot
  className="color-schema-red-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema="yellow" 1`] = `
<tfoot
  className="color-schema-yellow uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot colorSchema="yellow-rich" 1`] = `
<tfoot
  className="color-schema-yellow-rich uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot content="This is Content from ContentMixin" 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot content=12345 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot controlled=false 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot controlled=true 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot default props 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot disabled=false 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot disabled=true 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</tfoot>
`;

exports[`UU5.Bricks.Table.TFoot dynamic=false 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot dynamic=true 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot hidden=false 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot hidden=true 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot id="myId" 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot ignoreHTML=false 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot ignoreHTML=true 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot mainAttrs=undefined 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot name="myName" 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel="bigBox" 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel="bigBoxCollection" 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel="box" 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel="boxCollection" 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel="container" 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Table.TFoot nestingLevel="page" 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel="smallBox" 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel="smallBoxCollection" 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot nestingLevel="spa" 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot noIndex=false 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot noIndex=true 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot props.allowTags example 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID1"
  style={Object {}}
  title={null}
>
  <Header
    content="Table"
    id="uuID1-header"
    key="uuID1-header"
    underline={false}
  />
  <table
    className="uu5-bricks-table-table"
  >
    <table-tbody
      colorSchema="blue"
      id="uuID2"
      key="uuID2"
    >
      <table-tr
        id="uuID3"
      >
        <table-td
          content="Rimmer"
          id="uuID4"
        />
        <table-td
          content="2nd class technician"
          id="uuID5"
        />
        <table-td
          content="comical"
          id="uuID6"
        />
      </table-tr>
    </table-tbody>
    <table-tfoot
      allowTags={
        Array [
          "UU5.Example.MyCompButton",
        ]
      }
      colorSchema="danger"
      id="uuID7"
      key="uuID7"
    >
      <table-tr
        id="uuID8"
      >
        <table-th
          content="Best rank"
          id="uuID9"
        />
        <table-td
          content="1st console officer"
          id="uuID10"
        />
        <MyAllowTagsComponents
          id="allowID"
        />
      </table-tr>
    </table-tfoot>
  </table>
  <Footer
    content="Table footer"
    id="uuID1-footer"
    key="uuID1-footer"
  />
</div>
`;

exports[`UU5.Bricks.Table.TFoot pureRender=false 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot pureRender=true 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot selected=false 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot selected=true 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot style="padding:8px; borderRadius: 2px" 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot style={"backgroundColor":"red","color":"blue"} 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot textCorrector=false 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot textCorrector=true 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.TFoot tooltip="My Tooltip" 1`] = `
<tfoot
  className="uu5-bricks-table-tfoot"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
